test/cgip/PP/error/instvars/instvars-13.res
Run-Time Error 221: Instance invariant was broken